# learning_optimization

./: .gitignore  INSTALL.md  MANIFEST.in  NEURAL_NETWORK_EXAMPLES.md  QUICKREF.md  README.md  __init__.py  pyproject.toml  setup.py  test_cost_gradient.py
data/: __init__.py  data_loader.py  optimal_params.mat
dump/: analytical_gradient.ipynb  benchmark.ipynb  explanation.ipynb  franci.ipynb  linear_pytorch.py  visualizing_gradients.py  visualizing_what_net_learns.ipynb
examples/: NN_MPC.py  example.py  gpu_example.py  params_optimization_cpu.py  params_optimization_gpu.py  switched_system_examples.py  torch_example.py
experiments/: ARCHITECTURE_STUDY_GUIDE.md  INDEX.md  QUICK_REFERENCE.md  README.md  analyze_results.py  architecture_comparison_study.py  quick_architecture_comparison.py  run_example_workflow.py
models/: example_50_50_torch_20260108_171243.pt  nahs_torch_20251212_165742.pt  pannocchia_50_50_torch_20251215_173620.pt  pannocchia_50_50_torch_20251216_145750.pt  pannocchia_torch_20251209_112339.pt  pannocchia_torch_20251209_164031.pt  pannocchia_torch_20251209_182122.pt  pannocchia_torch_20251209_190035.pt
optimizers/: Casadi2Torch.py  README.md  c2t.py  neural_network.py  sgd.py  switched_linear_torch.py  switched_linear_torch_2.py
optimizers/torch_lib/: cost.py  gen_file.py  gen_file_torch.py
sgd/: PYTORCH_README.md  README.md  __init__.py  example.py  optimizers.py  params_optimization.py  params_optimization_cpu.py  params_optimization_gpu.py  sgd.py  torch_example.py  torch_optimizers.py
sgd/examples/: torch_example.py
src/: PYTORCH_README.md  __init__.py  neural_network.py  requirements.txt  switched_linear_torch.py  switched_system_simulator.py  training.py  validation.py
tests/: test_cost_gradient.py  test_import.py  test_neural_network.py  test_optimizers.py
torch_lib/: gen_file.py  gen_file_torch.py
