[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-optimization"
version = "0.1.0"
description = "Algorithms and optimizer implementations for learning-based optimization of control inputs and mode durations in switched optimal control problems"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Pietro Gori", email = "piergo98@example.com"}
]
keywords = ["optimization", "sgd", "stochastic gradient descent", "control", "switched systems"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=1.10.0",
]
casadi = [
    "casadi>=3.5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
all = [
    "torch>=1.10.0",
    "casadi>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/piergo98/learning_optimization"
Repository = "https://github.com/piergo98/learning_optimization"
Issues = "https://github.com/piergo98/learning_optimization/issues"

[tool.setuptools]
packages = ["optimizers"]

[tool.setuptools.package-data]
optimizers = ["*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=optimizers --cov-report=term-missing"
